--- a/BaiTap6_63131545/Views/NhanViens63131545/Edit.cshtml
+++ b/BaiTap6_63131545/Views/NhanViens63131545/Edit.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewBag.Title = "Edit";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+
 }
 
 <h2>Edit</h2>
@@ -95,6 +97,3 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
