--- a/BaiTap6_63131545/Views/NhanViens63131545/Index.cshtml
+++ b/BaiTap6_63131545/Views/NhanViens63131545/Index.cshtml
@@ -5,6 +5,8 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
     int i = 0;
     string gtinh = "";
+    var grid = new WebGrid(Model, canPage: true, defaultSort: "TenNV", rowsPerPage: 5);
+    @Scripts.Render("~/Scripts/jquery-1.6.2.min.js")
 }
 
 <h2>DANH SÁCH NHÂN VIÊN</h2>
@@ -12,85 +14,82 @@
 <p>
     @Html.ActionLink("Thêm mới", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            STT
-        </th>
-        <th>
-            Mã nhân viên
-        </th>
-        <th>
-            Họ nhân viên
-        </th>
-        <th>
-            Tên Nv
-        </th>
-        <th>
-            Giới tính
-        </th>
-        <th>
-            Ngày sinh
-        </th>
-        <th>
-            Lương
-        </th>
-        <th>
-            Ảnh NV
-        </th>
-        <th>
-            Địa chỉ
-        </th>
-        <th>
-            Phòng ban
-        </th>
-        <th></th>
-    </tr>
+<head>
+    <style type="text/css">
+        .grid-footer {
+            color: #000;
+            font: 17px Calibri;
+            text-align: center;
+            font-weight: bold;
+        }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @{ i++;}
-            @i
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MaNV)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HoNV)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TenNV)
-        </td>
-        <td>
-            @{if (item.GioiTinh == true)
-                { gtinh = "Nam"; }
-                else
-                { gtinh = "Nữ"; }
+            .grid-footer a {
+                background-color: #ffffff;
+                color: blue;
+                box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+                padding: 1px 10px 2px 10px;
             }
-            @gtinh
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NgaySinh)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Luong)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AnhNV)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DiaChi)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PhongBan.TenPB)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.MaNV }) |
-            @Html.ActionLink("Details", "Details", new { id = item.MaNV }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.MaNV })
-        </td>
-    </tr>
-}
 
-</table>
+                .grid-footer a:active, a:hover {
+                    background-color: #ffffff;
+                    color: #FFAD33;
+                    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+                }
+
+        .alternatingRowStyle {
+            background-color: aliceblue;
+        }
+
+        table .table1 {
+            text-align: left;
+            margin-left: 0px;
+            margin-right: 0px;
+            width: 800px;
+        }
+
+        .tr, .td {
+            text-align: left;
+        }
+    </style>
+</head>
+
+<div id="gridContent">
+    @ViewBag.TB
+    @grid.GetHtml(
+        tableStyle: "table table-bordered table-hover",
+        footerStyle: "grid-footer",
+        fillEmptyRows: true,
+        mode: WebGridPagerModes.Numeric,
+        alternatingRowStyle: "alternatingRowStyle",
+          columns: new[]  // colums in grid
+         {
+     grid.Column("STT",format: item => item.WebGrid.Rows.IndexOf(item) + 1 + Math.Round(Convert.ToDouble(grid.TotalRowCount / grid.PageCount) / grid.RowsPerPage) * grid.RowsPerPage * grid.PageIndex),
+    grid.Column("MaNV","Mã nhân viên"), //the model fields to display
+    grid.Column("HoNV","Họ nhân viên"  ),
+    grid.Column("TenNV","Tên nhân viên"),
+    grid.Column("GioiTinh","Giới tính",format: (@item) => @item.GioiTinh==true?"Nam":"Nữ"),
+    grid.Column("NgaySinh","Ngày sinh",format:@<text> @item.NgaySinh.ToString("dd/MM/yyyy")</text>),
+grid.Column("Luong","Tiền lương",format:@<text> @item.Luong.ToString("#,##0")</text>),
+grid.Column("AnhNV","Ảnh Nhân viên"),
+
+grid.Column("DiaChi","Địa chỉ"),
+grid.Column("PhongBan.TenPB","Phòng ban"),
+grid.Column(format: (item) => Html.ActionLink("Cập nhật", "Edit", "NhanViens63131545",new { id = item.MaNV },"NhanViens63131545Controller")),
+grid.Column(format: (item) => Html.ActionLink("Xem chi tiết", "Details","NhanViens63131545", new { id = item.MaNV },"NhanViens63131545Controller")),
+grid.Column(format: (item) => Html.ActionLink("Xóa", "Delete","NhanViens63131545", new { id = item.MaNV },"NhanVienViens63131545Controller")),
+grid.Column("Chức năng", format: @<text>
+    <a href="@Url.Action("Edit",
+                    new { id = item.MaNV})" class="edit-btn"><abbr title="Cập nhật dữ liệu"><img src="/images/edit.png" width="20" height="20" /></abbr></a>
+    <a href="@Url.Action("Details",
+                    new { id = item.MaNV})" class="edit-btn"><abbr title="Xem chi tiết"><img src="/images/details.png" width="20" height="20" /></abbr></a>
+    <a href="@Url.Action("Delete",
+                    new { id = item.MaNV})" class="edit-btn">
+        <abbr title="Xóa dữ liệu">
+            <img src="/images/delete.png" width="20" height="20" />
+        </abbr>
+    </a>
+</text>),
+
+}
+)
+</div>
